--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "pg": "^8.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
